--- a/salon/templates/saloon/salonOwner_dashboard.html
+++ b/salon/templates/saloon/salonOwner_dashboard.html
@@ -423,7 +423,7 @@
             <h6 class="m-b-20">Appointments Board</h6>
             <h2 class="text-right"><i class="fas fa-calendar-alt f-left"></i></h2>
 <!--            <p><span style="font-size: 20px;">account created at </span></p>-->
-             <a style="margin-left:12px;" href="">Appointments</a>
+             <a style="margin-left:12px;" href="{% url 'saloon-appointments' %}">Appointments</a>
           </div>
         </div>
       </div>
