--- a/salon/templates/saloon/manage_appointment.html
+++ b/salon/templates/saloon/manage_appointment.html
@@ -50,6 +50,179 @@
       font-weight: 600;
       color: #fff;
       transition: 0.5s;
+      transition-property: background;
+    }
+
+    .logout_btn:hover {
+      background: #0B87A6;
+    }
+
+    .sidebar {
+      background: #2f323a;
+      margin-top: 70px;
+      padding-top: 30px;
+      position: fixed;
+      left: 0;
+      width: 250px;
+      height: 100%;
+      transition: 0.5s;
+      transition-property: left;
+    }
+
+    .sidebar .profile_image {
+      width: 100px;
+      height: 100px;
+      border-radius: 100px;
+      margin-bottom: 10px;
+    }
+
+    .sidebar h4 {
+      color: #ccc;
+      margin-top: 0;
+      margin-bottom: 20px;
+    }
+
+    .sidebar a {
+      color: #fff;
+      display: block;
+      width: 100%;
+      line-height: 60px;
+      text-decoration: none;
+      padding-left: 40px;
+      box-sizing: border-box;
+      transition: 0.5s;
+      transition-property: background;
+    }
+
+    .sidebar a:hover {
+      background: #19B3D3;
+    }
+
+    .sidebar i {
+      padding-right: 10px;
+    }
+
+    label #sidebar_btn {
+      z-index: 1;
+      color: #fff;
+      position: fixed;
+      cursor: pointer;
+      left: 300px;
+      font-size: 20px;
+      margin: 5px 0;
+      transition: 0.5s;
+      transition-property: color;
+    }
+
+    label #sidebar_btn:hover {
+      color: #19B3D3;
+    }
+
+    #check:checked~.sidebar {
+      left: -190px;
+    }
+
+    #check:checked~.sidebar a span {
+      display: none;
+    }
+
+    #check:checked~.sidebar a {
+      font-size: 20px;
+      margin-left: 170px;
+      width: 80px;
+    }
+
+    .content {
+      margin-left: 250px;
+      background: url(background.png) no-repeat;
+      background-position: center;
+      background-size: cover;
+      height: 100vh;
+      transition: 0.5s;
+    }
+
+    #check:checked~.content {
+      margin-left: 60px;
+    }
+
+    #check {
+      display: none;
+    }
+  </style>
+
+  <style media="screen">
+      .alert {
+        margin-left: 25%;
+        margin-right: 25%;
+        padding: 20px;
+        background-color: #f44336;
+        color: white;
+      }
+
+      .w3-panel p {
+        padding-top: 10px;
+      }
+
+      .closebtn {
+        margin-left: 15px;
+        color: white;
+        font-weight: bold;
+        float: right;
+        font-size: 22px;
+        line-height: 20px;
+        cursor: pointer;
+        transition: 0.3s;
+      }
+
+      .closebtn:hover {
+        color: black;
+      }
+    </style>
+
+  <style media="screen">
+    a:link {
+      text-decoration: none;
+    }
+
+    body {
+      margin: 0;
+      padding: 0;
+      font-family: "Roboto", sans-serif;
+    }
+
+    header {
+      position: fixed;
+      background: #22242A;
+      padding: 20px;
+      width: 100%;
+
+      z-index: 1;
+    }
+
+    .left_area h3 {
+      color: #fff;
+      margin: 0px;
+      text-transform: uppercase;
+      font-size: 22px;
+      font-weight: 900;
+    }
+
+    .left_area span {
+      color: #19B3D3;
+    }
+
+    .logout_btn {
+      padding: 5px;
+      background: #19B3D3;
+      text-decoration: none;
+      float: right;
+      margin-top: -30px;
+      margin-right: 40px;
+      border-radius: 2px;
+      font-size: 15px;
+      font-weight: 600;
+      color: #fff;
+      transition: 0.5s;
 
     }
 
@@ -206,69 +379,128 @@
     }
   </style>
   <style type="text/css">
-     a:link {
-       text-decoration: none;
-     }
+    a:link {
+      text-decoration: none;
+    }
 
-     h6 {
-       color: white;
-     }
+    .order-card {
+      color: #fff;
+    }
 
-     .order-card {
-       color: #fff;
-     }
+    .bg-c-blue {
+      background: linear-gradient(45deg, #4099ff, #73b4ff);
+    }
 
-     .bg-c-blue {
-       background: linear-gradient(45deg, #4099ff, #73b4ff);
-     }
+    .bg-c-green {
+      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
+    }
 
-     .bg-c-green {
-       background: linear-gradient(45deg, #2ed8b6, #59e0c5);
-     }
+    .bg-c-yellow {
+      background: linear-gradient(45deg, #FFB64D, #ffcb80);
+    }
 
-     .bg-c-yellow {
-       background: linear-gradient(45deg, #FFB64D, #ffcb80);
-     }
-
-     .bg-c-pink {
-       background: linear-gradient(45deg, #FF5370, #ff869a);
-     }
+    .bg-c-pink {
+      background: linear-gradient(45deg, #FF5370, #ff869a);
+    }
 
 
-     .card {
-       border-radius: 5px;
-       -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-       box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
-       border: none;
-       margin-bottom: 30px;
-       -webkit-transition: all 0.3s ease-in-out;
-       transition: all 0.3s ease-in-out;
-     }
+    .card {
+      border-radius: 5px;
+      -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+      box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+      border: none;
+      margin-bottom: 30px;
+      -webkit-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+    }
 
-     .card .card-block {
-       padding: 25px;
-     }
+    .card .card-block {
+      padding: 25px;
+    }
 
-     .order-card i {
-       font-size: 26px;
-     }
+    .order-card i {
+      font-size: 26px;
+    }
 
-     .f-left {
-       float: left;
-     }
+    .f-left {
+      float: left;
+    }
 
-     .f-right {
-       float: right;
-     }
-   </style>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
- <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
-  <link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
-  <script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
-  <script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
+    .f-right {
+      float: right;
+    }
+  </style>
 
+<style type="text/css">
+    a:link {
+      text-decoration: none;
+    }
+
+    .order-card {
+      color: #fff;
+    }
+
+    .bg-c-blue {
+      background: linear-gradient(45deg, #4099ff, #73b4ff);
+    }
+
+    .bg-c-green {
+      background: linear-gradient(45deg, #2ed8b6, #59e0c5);
+    }
+
+    .bg-c-yellow {
+      background: linear-gradient(45deg, #FFB64D, #ffcb80);
+    }
+
+    .bg-c-pink {
+      background: linear-gradient(45deg, #FF5370, #ff869a);
+    }
+
+
+    .card {
+      border-radius: 5px;
+      -webkit-box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+      box-shadow: 0 1px 2.94px 0.06px rgba(4, 26, 55, 0.16);
+      border: none;
+      margin-bottom: 30px;
+      -webkit-transition: all 0.3s ease-in-out;
+      transition: all 0.3s ease-in-out;
+    }
+
+    .card .card-block {
+      padding: 25px;
+    }
+
+    .order-card i {
+      font-size: 26px;
+    }
+
+    .f-left {
+      float: left;
+    }
+
+    .f-right {
+      float: right;
+    }
+  </style>
+  <style>
+table {
+  border-collapse: collapse;
+  width: 100%;
+}
+
+th, td {
+  text-align: left;
+  padding: 8px;
+}
+
+tr:nth-child(even){background-color: #f2f2f2}
+
+th {
+  background-color: #4CAF50;
+  color: white;
+}
+</style>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
   <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
   <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css">
@@ -280,8 +512,10 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"></script>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.10.2/jquery.min.js"></script>
   <link href="http://netdna.bootstrapcdn.com/bootstrap/4.0.0-beta/css/bootstrap.min.css" rel="stylesheet">
+  <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css">
   <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     <link rel="stylesheet" href="static/css/nav.css">
     <link rel="stylesheet" href="static/css/index.css">
     <link rel="stylesheet" href="static/css/cards.css">
@@ -299,10 +533,10 @@
       <i class="fas fa-bars" id="sidebar_btn"></i>
     </label>
     <div class="left_area">
-      <h3>Salon Reservation</h3>
+      <h3>Salon Reservation </h3>
     </div>
     <div class="right_area">
-      <a href="index.html" class="logout_btn">Logout</a>
+      <a href="{% url 'system-logout' %}" class="logout_btn">Logout</a>
     </div>
   </header>
   <!--header area end-->
@@ -310,14 +544,12 @@
   <div class="sidebar">
     <center>
 
-      <img src="images/admin.png" class="profile_image" alt="customer">
-      <h4>Customer  First Name</h4>
+      <img src="assets/images/salonOwner.png" class="profile_image" alt="salonOwner">
+      <h4>SalonOwner First Name</h4>
 
     </center>
 
-    <a href="customer_dashboard.html"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
-    <a href="manage_appointment.html"><i class="fas fa-desktop"></i><span>Manage Appointments</span></a>
-    <a href="about_salons.html"><i class="fas fa-desktop"></i><span>About salons</span></a>
+  <a href="{% url 'saloon-dashboard' %}"><i class="fas fa-desktop"></i><span>Dashboard</span></a>
 
 
   </div>
@@ -328,67 +560,43 @@
   <div class="content">
     <br><br><br><br><br>
 
-    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
- <div class="container">
-   <div class="row">
-     <div class="col-md-4 col-xl-3">
-       <div class="card bg-c-blue order-card">
-         <div class="card-block">
-           <a href="customer_make_appointment.html">
-             <h6 class="m-b-20">Make An appointment</h6>
-           </a>
-           <br>
-           <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
+    <h2 style="color: grey;text-align: center;">Below are the active salons salons</h2>
 
-         </div>
-       </div>
-     </div>
+<table>
+  <tr>
 
-     <div class="col-md-4 col-xl-3">
-       <div class="card bg-c-yellow order-card">
-         <div class="card-block">
-           <a href="customer_change_appointment.html">
-             <h6 class="m-b-20">change your appointment </h6>
-           </a>
-           <br>
-           <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
-         </div>
-       </div>
-     </div>
-   <!--  <div class="col-md-4 col-xl-3">
-       <div class="card bg-c-blue order-card">
-         <div class="card-block">
-           <a href="admin_view_all_customers_appointments.html">
-             <h6 class="m-b-20">View All customer's appointments</h6>
-           </a>
-           <br>
-           <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
+    <th>Service Selected</th>
+    <th>Style chosen</th>
+    <th>Amount to be Paid</th>
+      <th>Approved</th>
+    <th>Reservation Date</th>
+<!--    <th>Reservation Time</th>-->
+     <th>Details</th>
+  </tr>
 
-         </div>
-       </div>
-     </div>
-   -->
-   <!--
-     <div class="col-md-4 col-xl-3">
-       <div class="card bg-c-blue order-card">
-         <div class="card-block">
-           <a href="#">
-             <h6 class="m-b-20">Report A salon </h6>
-           </a>
-           <br>
-           <h2 class="text-right"><i class="fas fa-eye f-left"></i></h2>
+  {% for appointment in appointments %}
+      <tr>
 
-         </div>
-       </div>
-     </div>
-   -->
-   </div>
- </div>
+    <td>{{appointment.style.service}}</td>
+    <td>{{appointment.style}}</td>
+    <td>{{appointment.style.service.price}} frw</td>
+          {% if appointment.approved %}
+          <td>APPROVED</td>
+          {% else %}
+          <td>NOT APPROVED</td>
+          {% endif %}
+    <td>{{appointment.time |date:"H:m  D d M Y" }}</td>
+<!--    <td>16:30'</td>-->
+    <td><a href="{% url 'customer-appointment-details' appointment.id %}"   ><i class="material-icons">arrow_forward</i></a></td>
+  </tr>
+  {% endfor %}
+
+</table>
 
 
     <br><br><br>
-  <!--  {% include "salon/footer.html" %}-->
-    <footer>
+
+      <footer>
 
   <p>
     <a href="https://www.google.com/search?q=facebook+login&oq=facebook+login&aqs=chrome..69i57j69i64j69i60l4.3222j0j7&sourceid=chrome&ie=UTF-8" class="fa fa-facebook"></a>
@@ -410,13 +618,59 @@
     </div>
   </div>
 </footer>
-
   </div>
   <!--content end-->
-  <!--
-      written By : elie kayitare
 
-      -->
+<!--  modal -->
+
+
+  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h5 class="modal-title" id="exampleModalLabel">Accept or decline the appointment</h5>
+        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
+      </div>
+      <div id="card_body" class="modal-body">
+        <input type="text" id="appointment_id" name="appointment_id" class="form-control" hidden>
+        <h5 id="names"></h5>
+
+
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-dismiss="modal">Accept</button>
+        <button type="button" class="btn btn-primary">Declines</button>
+      </div>
+    </div>
+  </div>
+</div>
+
+
+<!--  end -->
+
+
+
+  <script>
+
+      const setData =(id)=>{
+      console.log('Hello')
+          document.getElementById('card_body').innerHtml=`
+             <input type="text" value="${id}" name="appointment_id" class="form-control" hidden>
+
+          `
+        document.getElementById('myModal').aria-hidden=false
+      }
+
+
+
+    $('#myModal').on('shown.bs.modal', function () {
+    $('#myInput').trigger('focus')
+
+   })
+  </script>
+
 </body>
 
 </html>
