--- a/salon/templates/saloon/saloon_appointment_details.html
+++ b/salon/templates/saloon/saloon_appointment_details.html
@@ -482,6 +482,12 @@
     .f-right {
       float: right;
     }
+    .myne{
+      display:flex;
+      flex-direction:row;
+      justify-content:space-between;
+      color:red;
+    }
   </style>
   <style>
 table {
@@ -523,8 +529,54 @@ th {
 
 
 </head>
+<head>
+<meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
+<link rel="alternate" type="application/json+oembed" href="https://www.jotform.com/oembed/?format=json&amp;url=https%3A%2F%2Fform.jotform.com%2F202605512245546" title="oEmbed Form">
+<link rel="alternate" type="text/xml+oembed" href="https://www.jotform.com/oembed/?format=xml&amp;url=https%3A%2F%2Fform.jotform.com%2F202605512245546" title="oEmbed Form">
+<meta property="og:title" content="Business Registration Form" >
+<meta property="og:url" content="https://form.jotform.com/202605512245546" >
+<meta property="og:description" content="Please click the link to complete this form.">
+<meta name="slack-app-id" content="AHNMASS8M">
+<link rel="shortcut icon" href="https://cdn.jotfor.ms/favicon.ico">
+<link rel="canonical" href="https://form.jotform.com/202605512245546" />
+<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=2.0, user-scalable=1" />
+<meta name="HandheldFriendly" content="true" />
+<title>Business Registration Form</title>
+<link type="text/css" media="print" rel="stylesheet" href="https://cdn.jotfor.ms/css/printForm.css?3.3.20374" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/themes/CSS/5e6b428acc8c4e222d1beb91.css?themeRevisionID=5f30e2a790832f3e96009402"/>
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/payment/payment_styles.css?3.3.20374" />
+<link type="text/css" rel="stylesheet" href="https://cdn.jotfor.ms/css/styles/payment/payment_feature.css?3.3.20374" />
+<script src="https://cdn.jotfor.ms/js/vendor/jquery-1.8.0.min.js?v=3.3.20374" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/js/vendor/maskedinput.min.js?v=3.3.20374" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/js/vendor/jquery.maskedinput.min.js?v=3.3.20374" type="text/javascript"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/punycode/1.4.1/punycode.min.js"></script>
+<script src="https://cdn.jotfor.ms/static/prototype.forms.js" type="text/javascript"></script>
+<script src="https://cdn.jotfor.ms/static/jotform.forms.js?3.3.20374" type="text/javascript"></script>
+<script type="text/javascript">
+   JotForm.setConditions([{"action":{"field":"13","visibility":"Show"},"link":"Any","terms":[{"field":"11","operator":"equals","value":"Others, please specify below."}],"type":"field"}]);
+  JotForm.init(function(){
+if (window.JotForm && JotForm.accessible) $('input_6').setAttribute('tabindex',0);
+      JotForm.setPhoneMaskingValidator( 'input_12_full', '(###) ###-####' );
+      setTimeout(function() {
+          $('input_5').hint('ex: myname@example.com');
+       }, 20);
+if (window.JotForm && JotForm.accessible) $('input_13').setAttribute('tabindex',0);
+if (window.JotForm && JotForm.accessible) $('input_8').setAttribute('tabindex',0);
+  JotForm.newDefaultTheme = true;
+  JotForm.newPaymentUIForNewCreatedForms = false;
+  JotForm.newPaymentUI = true;
+    /*INIT-END*/
+  });
+
+   JotForm.prepareCalculationsOnTheFly([null,null,{"name":"submitForm","qid":"2","text":"Submit Registration","type":"control_button"},{"name":"address3","qid":"3","text":"Address","type":"control_address"},{"name":"businessOwner","qid":"4","text":"Business Owner","type":"control_fullname"},{"name":"email","qid":"5","subLabel":"example@example.com","text":"E-mail","type":"control_email"},{"name":"businessName","qid":"6","text":"Business Name","type":"control_textbox"},null,{"name":"message","qid":"8","text":"Message","type":"control_textarea"},null,{"name":"clickTo","qid":"10","text":"Register Your Business","type":"control_head"},{"name":"typeOf","qid":"11","text":"Type of Business","type":"control_dropdown"},{"name":"contactNumber","qid":"12","text":"Contact Number","type":"control_phone"},{"name":"others","qid":"13","text":"Others","type":"control_textbox"}]);
+   setTimeout(function() {
+JotForm.paymentExtrasOnTheFly([null,null,{"name":"submitForm","qid":"2","text":"Submit Registration","type":"control_button"},{"name":"address3","qid":"3","text":"Address","type":"control_address"},{"name":"businessOwner","qid":"4","text":"Business Owner","type":"control_fullname"},{"name":"email","qid":"5","subLabel":"example@example.com","text":"E-mail","type":"control_email"},{"name":"businessName","qid":"6","text":"Business Name","type":"control_textbox"},null,{"name":"message","qid":"8","text":"Message","type":"control_textarea"},null,{"name":"clickTo","qid":"10","text":"Register Your Business","type":"control_head"},{"name":"typeOf","qid":"11","text":"Type of Business","type":"control_dropdown"},{"name":"contactNumber","qid":"12","text":"Contact Number","type":"control_phone"},{"name":"others","qid":"13","text":"Others","type":"control_textbox"}]);}, 20); 
+</script>
+</head>
 
 <body>
+
+
 
   <input type="checkbox" id="check">
   <!--header area start-->
@@ -560,36 +612,126 @@ th {
   <div class="content">
     <br><br><br><br><br>
 
-    <h2 style="color: grey;text-align: center;">Below are the active salons salons</h2>
 
-<table>
-  <tr>
-    <th>Names</th>
-    <th>Email Address</th>
-    <th>phone Number</th>
-    <th>Service Selected</th>
-    <th>Style chosen</th>
-    <th>Amount to be Paid</th>
-    <th>Reservation Date</th>
-<!--    <th>Reservation Time</th>-->
-     <th>Approve/Delete Reservation</th>
-  </tr>
+   <!-- <h2 style="color: grey;text-align: center;">Below are the comments for customers</h2>-->
 
-  {% for appointment in appointments %}
-      <tr>
-    <td>{{appointment.client.owner}}</td>
-    <td>{{appointment.client.owner.email}}</td>
-    <td>{{appointment.client.owner.phone}}</td>
-    <td>{{appointment.style.service}}</td>
-    <td>{{appointment.style}}</td>
-    <td>{{appointment.style.service.price}} frw</td>
-    <td>{{appointment.time |date:"H:m  D d M Y" }}</td>
-<!--    <td>16:30'</td>-->
-    <td><a href="{% url 'appointment-details' appointment.id %}"   ><i class="material-icons">more_horiz</i></a></td>
-  </tr>
-  {% endfor %}
 
-</table>
+
+  <div role="main" class="form-all">
+    <ul class="form-section page-section">
+      <li id="cid_10" class="form-input-wide" data-type="control_head">
+        <div class="form-header-group  header-large">
+          <div class="header-text httal htvam">
+            {% if in_past %}
+             <h1 style="color:#eb1734;" class="form-header" data-component="header">
+              Appointment details (Date exceeded)
+                <span class="form-required">
+            *
+          </span>
+            </h1>
+            {% else %}
+            <h1 id="header_10" class="form-header" data-component="header">
+              Appointment details
+            </h1>
+            {% endif %}
+          </div>
+        </div>
+      </li>
+      <li class="form-line jf-required" data-type="control_fullname" id="id_4">
+        <label class="form-label form-label-top form-label-auto" id="label_4" for="first_4">
+          Names : {{appointment.client.owner}}
+
+        </label>
+
+      </li>
+      <li class="form-line jf-required" data-type="control_textbox" id="id_6">
+        <label class="form-label form-label-top form-label-auto" id="label_6" for="input_6">
+          E-mail: {{appointment.client.owner.email}}
+
+        </label>
+
+      </li>
+       <li class="form-line jf-required" data-type="control_textbox" id="id_6">
+         <label class="form-label form-label-top form-label-auto" id="label_7" for="input_6">
+          Phone number: {{appointment.client.owner.phone}}
+<!--          <span class="form-required">-->
+<!--            *-->
+<!--          </span>-->
+        </label>
+
+      </li>
+       <li class="form-line jf-required" data-type="control_textbox" id="id_7">
+        <label class="form-label form-label-top form-label-auto" id="label_8" for="input_6">
+        {% if in_past %}
+          This date was exceeded: {{appointment.time |date:"D d M Y, H:m  " }}
+          {% else %}
+        Date of the appointment: {{appointment.time |date:"D d M Y, H:m  " }}
+          {% endif %}
+        </label>
+
+      </li>
+      <li class="form-line jf-required" data-type="control_phone" id="id_12">
+        <label class="form-label form-label-top form-label-auto" id="label_12" for="input_12_full">
+         <h5 style="overflow: hidden;">Service - Style: {{appointment.style.service}}, {{appointment.style}} {{appointment.style.service.price}}Frw</h5>
+
+        </label>
+
+      </li>
+      <li class="form-line jf-required" data-type="control_email" id="id_5">
+        <label class="form-label form-label-top form-label-auto" id="label_5" for="input_5">
+         <h5> Comment:</h5>
+
+        </label>
+        <div id="cid_5" class="form-input-wide jf-required" data-layout="half">
+          <span class="form-sub-label-container " style="vertical-align:top">
+            {% if appointment.comment|length == 0  %}
+            No comment from the client
+            {% else %}
+          {{appointment.comment}}
+            {% endif %}
+          </span>
+        </div>
+      </li>
+
+{% if in_past %}
+      {% else %}
+      <li class="form-line" data-type="control_button" id="id_2">
+        <div id="cid_2" class="form-input-wide" data-layout="full">
+          <div data-align="auto" class="form-buttons-wrapper form-buttons-auto   jsTest-button-wrapperField">
+            <form class="jotform-form" autocomplete="on" method="post" action="{% url 'accept-decline-appointment' appointment_id=appointment.id accepted='accepted' %}" >
+            {% csrf_token %}
+              <button id="input" type="submit" class="form-submit-button submit-button jf-form-buttons jsTest-submitField"  data-content="">
+             ACCEPT
+            </button>
+            </form>
+             <form class="jotform-form" autocomplete="on" method="post" action="{% url 'accept-decline-appointment' appointment_id=appointment.id accepted='declined' %}" >
+            {% csrf_token %}
+             <button style="background-color:#e61c33; border-color:#e61c33;" id="delete-button" type="button" class="form-submit-button submit-button jf-form-buttons jsTest-submitField"  data-content="">
+             DECLINE/DELETE
+            </button>
+             </form>
+          </div>
+        </div>
+{% endif %}
+
+      </li>
+      <li style="display:none">
+        Should be Empty:
+        <input type="text" name="website" value="" />
+      </li>
+    </ul>
+  </div>
+  <script>
+  JotForm.showJotFormPowered = "new_footer";
+  </script>
+  <script>
+  JotForm.poweredByText = "Powered by JotForm";
+  </script>
+
+
+  <div class="formFooter-heightMask">
+  </div>
+
 
 
     <br><br><br>
@@ -619,56 +761,14 @@ th {
   </div>
   <!--content end-->
 
-<!--  modal -->
-
-
-  <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-  <div class="modal-dialog">
-    <div class="modal-content">
-      <div class="modal-header">
-        <h5 class="modal-title" id="exampleModalLabel">Accept or decline the appointment</h5>
-        <button type="button" class="close" data-dismiss="modal" aria-label="Close">
-          <span aria-hidden="true">&times;</span>
-        </button>
-      </div>
-      <div id="card_body" class="modal-body">
-        <input type="text" id="appointment_id" name="appointment_id" class="form-control" hidden>
-        <h5 id="names"></h5>
-
-
-      </div>
-      <div class="modal-footer">
-        <button type="button" class="btn btn-secondary" data-dismiss="modal">Accept</button>
-        <button type="button" class="btn btn-primary">Declines</button>
-      </div>
-    </div>
-  </div>
-</div>
-
-
-<!--  end -->
-
-
-
   <script>
-
-      const setData =(id)=>{
-      console.log('Hello')
-          document.getElementById('card_body').innerHtml=`
-             <input type="text" value="${id}" name="appointment_id" class="form-control" hidden>
-
-          `
-        document.getElementById('myModal').aria-hidden=false
-      }
-
-
-
-    $('#myModal').on('shown.bs.modal', function () {
-    $('#myInput').trigger('focus')
-
-   })
+    document.getElementById('delete-button').addEventListener('click',()=>{
+        const response = confirm("Are you sure, you want to delcine this appointment?")
+        if (response==true){
+            document.getElementById('delete-button').type="submit"
+        }
+    })
   </script>
-
 </body>
 
 </html>
