--- a/salon/templates/saloon/customer_change_appointment.html
+++ b/salon/templates/saloon/customer_change_appointment.html
@@ -624,7 +624,7 @@ JotForm.paymentExtrasOnTheFly([null,null,{"name":"submitForm","qid":"2","text":"
           <div class="header-text httal htvam">
             {% if appointment.approved == False %}
              <h1 style="color:#eb1734;" class="form-header" data-component="header">
-              Appointment details (Declined by the saloon)
+              Appointment details (Not Approved by the saloon)
                 <span class="form-required">
             *
           </span>
